--- a/app/src/main/res/drawable/ripple_effect.xml
+++ b/app/src/main/res/drawable/ripple_effect.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/colorHelperOne"
+    android:color="#a000e6bc"
     tools:targetApi="lollipop">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <corners android:radius="50dp" />
-            <solid android:color="@color/colorHelperOne" />
+            <solid android:color="#a000e6bc" />
         </shape>
     </item>
 </ripple>
