--- a/app/src/main/res/anim/fab_close.xml
+++ b/app/src/main/res/anim/fab_close.xml
@@ -11,26 +11,26 @@
         android:pivotY="50%"
 
         android:toXScale="0.0"
-        android:interpolator="@android:anim/linear_interpolator"
+        android:toYScale="0.0"
 
-        android:toYScale="0.0" />
+        android:interpolator="@android:anim/linear_interpolator" />
 
     <rotate
         android:duration="300"
 
         android:fromDegrees="360"
-        android:interpolator="@android:anim/linear_interpolator"
+        android:toDegrees="0"
 
         android:pivotX="50%"
         android:pivotY="50%"
 
-        android:toDegrees="0" />
+        android:interpolator="@android:anim/linear_interpolator" />
 
     <alpha
         android:duration="300"
 
         android:fromAlpha="1.0"
-        android:interpolator="@android:anim/accelerate_interpolator"
+        android:toAlpha="0.0"
 
-        android:toAlpha="0.0" />
+        android:interpolator="@android:anim/accelerate_interpolator" />
 </set>
